--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-title: Nöbetci Node
+title: Nöbetci
 module:
   imports:
     - path: github.com/imfing/hextra
@@ -22,7 +22,7 @@ menu:
       pageRef: /about
       weight: 2
     - name: Contact ↗
-      url: "https://github.com/imfing"
+      url: "https://github.com/muttehitler"
       weight: 3
     - name: Search
       weight: 4
@@ -30,14 +30,14 @@ menu:
         type: search
     - name: GitHub
       weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      url: "https://github.com/muttehitler/nobetci"
       params:
         icon: github
-    - name: Twitter
+    - name: Telegram
       weight: 6
-      url: "https://twitter.com/"
+      url: "https://t.me/muttehitler"
       params:
-        icon: x-twitter
+        icon: telegram
 
 params:
   navbar:
@@ -50,4 +50,16 @@ params:
 
   editURL:
     enable: true
-    base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+    base: "https://github.com/muttehitler/nobetci-docs/edit/main/content"
+
+defaultContentLanguage: en
+languages:
+  en:
+    languageName: English
+    weight: 1
+  tr:
+    languageName: Türkçe
+    weight: 2
+  fa:
+    languageName: فارسی
+    weight: 3
